Add all text to string.xml

--- a/app/src/main/res/layout/choose_result_users.xml
+++ b/app/src/main/res/layout/choose_result_users.xml
@@ -14,7 +14,7 @@
         android:layout_gravity="start"
         android:fontFamily="@font/alef"
         android:layoutDirection="rtl"
-        android:text="בחר חוק"
+        android:text="@string/choose_proposition"
         android:textAlignment="textStart"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -45,7 +45,7 @@
         android:backgroundTint="#5E00BCD4"
         android:fontFamily="@font/alef"
         android:layoutDirection="rtl"
-        android:text="כלל האזרחים"
+        android:text="@string/all_citizen"
         android:onClick="onClickAllUsers"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,7 +61,7 @@
         android:backgroundTint="#5E00BCD4"
         android:fontFamily="@font/alef"
         android:layoutDirection="rtl"
-        android:text="המפלגה שלי"
+        android:text="@string/my_pg"
         android:onClick="onClickSpecificPoliticalGroup"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
