--- a/app/src/main/res/layout/home_citizen.xml
+++ b/app/src/main/res/layout/home_citizen.xml
@@ -22,9 +22,9 @@
             android:gravity="center_vertical|center_horizontal"
             android:layoutDirection="rtl"
             android:onClick="openPropositionsPage"
-            android:text="הצבע כאן!"
+            android:text="@string/vote_here"
             android:textColor="#fff"
-            android:textSize="90px"
+            android:textSize="40sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -42,9 +42,9 @@
             android:gravity="center_vertical|center_horizontal"
             android:layoutDirection="rtl"
             android:onClick="openResultsPage"
-            android:text="תוצאות האמת"
+            android:text="@string/final_results"
             android:textColor="#fff"
-            android:textSize="80px"
+            android:textSize="30sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -63,9 +63,9 @@
             android:layoutDirection="rtl"
             android:onClick="openSettingsPage"
             android:shadowColor="#000000"
-            android:text="עדכון פרטים"
+            android:text="@string/update_settings"
             android:textColor="#fff"
-            android:textSize="60px"
+            android:textSize="25sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
