--- a/app/src/main/res/layout/home_parliament.xml
+++ b/app/src/main/res/layout/home_parliament.xml
@@ -17,9 +17,9 @@
         android:gravity="center_vertical|center_horizontal"
         android:layoutDirection="rtl"
         android:onClick="openPropositionsPage"
-        android:text="צפה בחוקים"
+        android:text="@string/show_propositions"
         android:textColor="#fff"
-        android:textSize="80px"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,9 +38,9 @@
         android:layoutDirection="rtl"
         android:onClick="openSettingsPage"
         android:shadowColor="#000000"
-        android:text="החלף סיסמא"
+        android:text="@string/change_pass"
         android:textColor="#fff"
-        android:textSize="50px"
+        android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -58,9 +58,9 @@
         android:gravity="center_vertical|center_horizontal"
         android:layoutDirection="rtl"
         android:onClick="openStatisticsPage"
-        android:text="צפה בסטטיסטיקות"
+        android:text="@string/show_statistics"
         android:textColor="#fff"
-        android:textSize="55px"
+        android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
