--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -94,7 +94,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/alef"
-        android:text="משתמש חדש?"
+        android:text="@string/new_user"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -110,7 +110,7 @@
         android:fontFamily="@font/alef"
         android:layoutDirection="rtl"
         android:onClick="onClickSignupCitizen"
-        android:text="הרשם&#10;כאזרח"
+        android:text="@string/signup_citizen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.72"
@@ -126,7 +126,7 @@
         android:fontFamily="@font/alef"
         android:layoutDirection="rtl"
         android:onClick="onClickSignupPM"
-        android:text="הירשם&#10;כחבר כנסת"
+        android:text="@string/signup_parliament"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.28"
