--- a/app/src/main/res/layout/signup_citizen.xml
+++ b/app/src/main/res/layout/signup_citizen.xml
@@ -112,7 +112,7 @@
         android:layout_gravity="start"
         android:fontFamily="@font/alef"
         android:layoutDirection="rtl"
-        android:text="שם מלא"
+        android:text="@string/full_name"
         android:textAlignment="textStart"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -145,7 +145,7 @@
         android:layout_gravity="start"
         android:fontFamily="@font/alef"
         android:layoutDirection="rtl"
-        android:text="שנת לידה"
+        android:text="@string/year_of_birth"
         android:textAlignment="textStart"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -177,7 +177,7 @@
         android:layout_gravity="start"
         android:fontFamily="@font/alef"
         android:layoutDirection="rtl"
-        android:text="בחר מפלגה"
+        android:text="@string/choose_pg"
         android:textAlignment="textStart"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -209,7 +209,7 @@
         android:layout_gravity="start"
         android:fontFamily="@font/alef"
         android:layoutDirection="rtl"
-        android:text="מגדר"
+        android:text="@string/gender"
         android:textAlignment="textStart"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -239,7 +239,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/alef"
             android:onClick="onRadioButtonClicked"
-            android:text="זכר"
+            android:text="@string/male"
             android:textSize="20sp" />
 
         <RadioButton
@@ -248,7 +248,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/alef"
             android:onClick="onRadioButtonClicked"
-            android:text="נקבה"
+            android:text="@string/female"
             android:textSize="20sp" />
     </RadioGroup>
 
@@ -259,7 +259,7 @@
         android:fontFamily="@font/alef"
         android:layoutDirection="rtl"
         android:onClick="onClickOK"
-        android:text="סיום"
+        android:text="@string/end"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
