--- a/app/src/main/res/layout/vote.xml
+++ b/app/src/main/res/layout/vote.xml
@@ -92,7 +92,7 @@
         android:textAlignment="center"
         android:textColor="#000000"
         android:textDirection="rtl"
-        android:textSize="30px"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
