--- a/app/src/main/res/layout/layout_home_page.xml
+++ b/app/src/main/res/layout/layout_home_page.xml
@@ -40,7 +40,7 @@
         android:layout_width="90dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/alef"
-        android:text="שלום"
+        android:text="@string/hello"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textDirection="rtl"
@@ -74,7 +74,7 @@
         android:layout_height="19dp"
         android:fontFamily="@font/alef"
         android:onClick="openLoginPage"
-        android:text="התנתק"
+        android:text="@string/logout"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
