--- a/app/src/main/res/layout/results.xml
+++ b/app/src/main/res/layout/results.xml
@@ -15,7 +15,7 @@
         android:layout_gravity="start"
         android:fontFamily="@font/alef"
         android:layoutDirection="rtl"
-        android:text="בחר חוק"
+        android:text="@string/choose_proposition"
         android:textAlignment="textStart"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -46,7 +46,7 @@
         android:backgroundTint="#5E00BCD4"
         android:fontFamily="@font/alef"
         android:layoutDirection="rtl"
-        android:text="צפה"
+        android:text="@string/show"
         android:onClick="openResultsView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
