--- a/app/src/main/res/layout/signup_pm.xml
+++ b/app/src/main/res/layout/signup_pm.xml
@@ -47,7 +47,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/alef"
         android:onClick="onClickOK"
-        android:text="אישור"
+        android:text="@string/ok"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.08"
