--- a/app/src/main/res/layout/home_parliament.xml
+++ b/app/src/main/res/layout/home_parliament.xml
@@ -22,7 +22,7 @@
             android:gravity="center_vertical|center_horizontal"
             android:layoutDirection="rtl"
             android:onClick="openPropositionsPage"
-            android:text="צפה בחוקים"
+            android:text="@string/show_propositions"
             android:textColor="#fff"
             android:textSize="80px"
             android:textStyle="bold"
@@ -43,7 +43,7 @@
             android:layoutDirection="rtl"
             android:onClick="openSettingsPage"
             android:shadowColor="#000000"
-            android:text="החלף סיסמא"
+            android:text="@string/change_pass"
             android:textColor="#fff"
             android:textSize="50px"
             android:textStyle="bold"
@@ -63,7 +63,7 @@
             android:gravity="center_vertical|center_horizontal"
             android:layoutDirection="rtl"
             android:onClick="openStatisticsPage"
-            android:text="צפה בסטטיסטיקות"
+            android:text="@string/show_statistics"
             android:textColor="#fff"
             android:textSize="55px"
             android:textStyle="bold"
