--- a/app/src/main/res/layout/layout_home_page.xml
+++ b/app/src/main/res/layout/layout_home_page.xml
@@ -90,7 +90,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/alef"
         android:onClick="sendMail"
-        android:text="צור קשר"
+        android:text="@string/connect_us"
         android:textSize="16sp"
         android:textStyle="normal|bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
