--- a/app/src/main/res/menu/setting_menu.xml
+++ b/app/src/main/res/menu/setting_menu.xml
@@ -3,10 +3,10 @@
 
     <item
         android:id="@+id/Home"
-        android:title="לדף הבית"/>
+        android:title="@string/menu_home"/>
     <item
         android:id="@+id/LogOut"
-        android:title="התנתק"/>
+        android:title="@string/logout"/>
 
 
 </menu>
