--- a/app/src/main/res/drawable/round_button.xml
+++ b/app/src/main/res/drawable/round_button.xml
@@ -3,10 +3,8 @@
     <item android:state_pressed="false">
         <shape android:shape="oval">
             <corners android:radius="1000dp" />
-            <solid android:color="@color/orange" />
             <stroke
-                android:width="2dip"
-                android:color="#FF5722" />
+                android:width="2dip" />
         </shape>
     </item>
 </selector>
