--- a/app/src/main/res/layout/home_citizen.xml
+++ b/app/src/main/res/layout/home_citizen.xml
@@ -42,9 +42,9 @@
             android:gravity="center_vertical|center_horizontal"
             android:layoutDirection="rtl"
             android:onClick="openResultsPage"
-            android:text="@string/final_results"
+            android:text="@string/result_citizens"
             android:textColor="#fff"
-            android:textSize="30sp"
+            android:textSize="28sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
