--- a/app/src/main/res/layout/match_parliament.xml
+++ b/app/src/main/res/layout/match_parliament.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MatchParliament">
 
     <include layout="@layout/layout_standard_page" />
-
 
     <RelativeLayout
         android:id="@+id/progress_layout"
@@ -148,6 +147,6 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header"
-        app:menu="@menu/basic_pm_menu" />
+        app:menu="@menu/basic_citizen_menu" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
