--- a/app/src/main/res/layout/match_parliament.xml
+++ b/app/src/main/res/layout/match_parliament.xml
@@ -76,7 +76,7 @@
             app:layout_constraintHorizontal_bias="0.8"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.35" />
+            app:layout_constraintVertical_bias="0.32" />
 
         <TextView
             android:id="@+id/parliament_name"
@@ -92,20 +92,20 @@
             app:layout_constraintHorizontal_bias="0.8"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.35" />
+            app:layout_constraintVertical_bias="0.32" />
 
         <ImageView
             android:id="@+id/matching_img"
             android:layout_width="350dp"
             android:layout_height="100dp"
             android:layoutDirection="rtl"
+            android:src="@drawable/avatars"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.25"
-            app:srcCompat="@drawable/avatars" />
+            app:layout_constraintVertical_bias="0.22" />
 
         <TextView
             android:id="@+id/matching_percent"
