--- a/app/src/main/res/layout/layout_home_page.xml
+++ b/app/src/main/res/layout/layout_home_page.xml
@@ -11,20 +11,21 @@
         android:id="@+id/logo"
         android:layout_width="216dp"
         android:layout_height="190dp"
+        android:layoutDirection="rtl"
+        android:src="@drawable/polity_correct_logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.918"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/polity_correct_logo"
-        android:layoutDirection="rtl"/>
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/userName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/alef"
+        android:layoutDirection="rtl"
         android:textSize="20sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -32,14 +33,14 @@
         app:layout_constraintHorizontal_bias="0.19"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.151"
-        android:layoutDirection="rtl"/>
+        app:layout_constraintVertical_bias="0.151" />
 
     <TextView
         android:id="@+id/hello"
         android:layout_width="90dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/alef"
+        android:layoutDirection="rtl"
         android:text="@string/hello"
         android:textAlignment="center"
         android:textColor="#000000"
@@ -51,86 +52,84 @@
         app:layout_constraintHorizontal_bias="0.101"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.087"
-        android:layoutDirection="rtl"/>
+        app:layout_constraintVertical_bias="0.087" />
 
     <ImageView
         android:id="@+id/logOut"
         android:layout_width="43dp"
         android:layout_height="38dp"
+        android:layoutDirection="rtl"
         android:onClick="openLoginPage"
+        android:src="@drawable/logout"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.981"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.992"
-        app:srcCompat="@drawable/logout"
-        android:layoutDirection="rtl"/>
+        app:layout_constraintVertical_bias="0.992" />
 
     <TextView
         android:id="@+id/logoutText"
         android:layout_width="43dp"
         android:layout_height="19dp"
         android:fontFamily="@font/alef"
+        android:layoutDirection="rtl"
         android:onClick="openLoginPage"
         android:text="@string/logout"
-        android:textSize="16sp"
+        android:textSize="13sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.981"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.93"
-        android:layoutDirection="rtl"/>
+        app:layout_constraintVertical_bias="0.93" />
 
     <TextView
         android:id="@+id/connectUs0"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/alef"
+        android:layoutDirection="rtl"
         android:onClick="sendMail"
         android:text="@string/connect_us"
-        android:textSize="16sp"
+        android:textSize="13sp"
         android:textStyle="normal|bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.051"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.98"
-        android:layoutDirection="rtl"/>
+        app:layout_constraintVertical_bias="0.98" />
 
     <ImageView
         android:id="@+id/connectUs"
-        android:layout_width="37dp"
+        android:layout_width="35dp"
         android:layout_height="32dp"
+        android:layoutDirection="rtl"
         android:onClick="sendMail"
+        android:src="@drawable/mail"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.22"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.984"
-        app:srcCompat="@drawable/mail"
-        android:layoutDirection="rtl"/>
+        app:layout_constraintVertical_bias="0.99" />
 
     <TextView
         android:id="@+id/settings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/alef"
-        android:textSize="16sp"
+        android:layoutDirection="rtl"
+        android:onClick="openSettingsPage"
+        android:text="@string/update_settings"
+        android:textSize="13sp"
         android:textStyle="normal|bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.98"
-        android:layoutDirection="rtl"
-        android:onClick="openSettingsPage"
-        android:text="@string/update_settings"
-        />
+        app:layout_constraintVertical_bias="0.98" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
