--- a/app/src/main/res/layout/layout_welcome_page.xml
+++ b/app/src/main/res/layout/layout_welcome_page.xml
@@ -9,12 +9,12 @@
         android:id="@+id/logo_welcome"
         android:layout_width="203dp"
         android:layout_height="143dp"
+        android:src="@drawable/polity_correct_logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.481"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.055"
-        app:srcCompat="@drawable/polity_correct_logo" />
+        app:layout_constraintVertical_bias="0.055" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
