--- a/app/src/main/res/layout/results.xml
+++ b/app/src/main/res/layout/results.xml
@@ -45,17 +45,16 @@
         app:layout_constraintVertical_bias="0.15" />
 
     <Button
-        android:id="@+id/login"
+        android:id="@+id/openResultsView"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
-        android:backgroundTint="#5E00BCD4"
         android:fontFamily="@font/alef"
         android:layoutDirection="rtl"
         android:text="@string/show"
         android:onClick="openResultsView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.9"
+        app:layout_constraintHorizontal_bias="0.95"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.146" />
